--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,75 @@ a:active {
     display: flex;
   
   }
+
+  /* Display block will make the images stack up in the work container */
+
+#work {
+    display: block;
+  }
+  
+  /* center and styling the main image inside the container */
+  
+  .mainImage {
+    
+    display: flex;
+    margin-left: 20em;
+    justify-content: flex-end;
+    width: 950px;
+  
+  }
+  
+  
+  .img1 {
+    background-image: url("../images/img1.jpg");
+    height: 300px;
+    width: 100%;
+    margin: 20px;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+  }
+  
+  /* applying space around the pictures and adding margin between the containers */
+  
+  .container2,
+  .container3 {
+    display: flex;
+    justify-content: space-around;
+    margin: 40px 50px;
+    flex-wrap: wrap;
+  
+  }
+  
+  /* sizing the pictures */
+  .img2,
+  .img3,
+  .img4,
+  .img5 {
+  
+    height: 250px;
+    width: 45%;
+    margin: 15px;
+    background-repeat: no-repeat;
+  }
+  
+  .img2 {
+    background-image: url("../images/img2.jpg");
+    max-width: 100%;
+  }
+  
+  .img3 {
+    background-image: url("../images/img3.jpg");
+    max-width: 100%;
+  }
+  
+  .img4 {
+    background-image: url("../images/img4.jpg");
+    max-width: 100%;
+  }
+  
+  .img5 {
+    background-image: url("../images/img5.jpg");
+    max-width: 100%;
+  }
+  
