--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ nav {
 nav a {
     text-decoration: underline;
     text-decoration-thickness: 30%;
-    margin-left: 6em;
+    margin-left: 2em;
     font-size: 1em;
 
 }
@@ -81,16 +81,13 @@ a:active {
     flex-direction: column;
    
   }
-  
-  .page-section {
-    display: flex;
-  
-  }
+
 
   /* Display block will make the images stack up in the work container */
 
 #work {
     display: block;
+    
   }
   
   /* center and styling the main image inside the container */
@@ -98,10 +95,8 @@ a:active {
   .mainImage {
     
     display: flex;
-    margin-left: 20em;
     justify-content: flex-end;
-    width: 950px;
-  
+
   }
   
   
@@ -133,7 +128,7 @@ a:active {
   .img5 {
   
     height: 250px;
-    width: 45%;
+    width: 500px;
     margin: 15px;
     background-repeat: no-repeat;
   }
@@ -157,4 +152,29 @@ a:active {
     background-image: url("../images/img5.jpg");
     max-width: 100%;
   }
+  /* styling text element on images*/
+
   
+  .text1 a{
+    text-decoration: none;
+    color: #ac0c0c;
+  }
+
+  .text1{
+    width: 350px;
+    margin-top: 9em;
+    background-color: #ecf2f9;
+  }
+
+  .text a{
+    text-decoration: none;
+    color: #ac0c0c;
+  }
+
+  .text{
+  display: flex;
+  width: 180px;
+  flex-direction: column;
+  margin-top: 6.5em;
+  background-color: #ecf2f9;
+  }
